# social-coach-live

./: README.md
.lovable/: plan.md
orchestrator/: main.py  requirements.txt
scripts/: test_analyze_media.py
services/asr_service/: __init__.py  diarization.py  main.py  requirements.txt
services/emotion_service/: main.py
services/llm_service/: main.py  requirements.txt
services/yolo_service/: main.py  requirements.txt
shared_models/: __init__.py  models.py  pyproject.toml
src/: App.tsx  index.css
src/components/meeting/: BottomControls.tsx  CaptionsList.tsx  CoachPanel.tsx  ExplanationBox.tsx  ExplanationPanel.tsx  ParticipantTile.tsx  TopBar.tsx  VideoGrid.tsx
src/data/: mockConversation.ts
src/hooks/: useFrameCapture.ts  useMediaCapture.ts  useRealtimeFaces.ts
src/lib/: api.ts
src/pages/: MeetingPage.tsx
src/types/: meeting.ts
